# Novash

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run.sh
.github/workflows/: cmake-single-platform.yml
src/: collections.c  collections.h  config.h  history.c  history.h  main  main.c  main.h  parser.c  parser.h  shell_state.c  shell_state.h  tokenizer.c  tokenizer.h  utils.c  utils.h
src/builtin/: builtin.c  builtin.h  history.c  job_control.c
src/executor/: builtin.c  builtin.h  executor.c  executor.h  jobs.c  jobs.h
src/expander/: expander.c  expander.h  pipeline.c  pipeline.h
src/history/: history.c  history.h
src/lexer/: lexer.c  lexer.h
src/parser/: parser.c  parser.h
src/prompt/: ps1.c  ps1.h
src/shell/: config.h  shell.c  shell.h  signal.c  signal.h  state.c  state.h
src/tokenizer/: tokenizer.c  tokenizer.h
src/utils/: collections.c  collections.h  log.h  memory.c  memory.h  utils.c  utils.h  xsys.c  xsys.h
src/utils/system/: memory.c  memory.h  syscall.c  syscall.h
tests/: CMakeLists.txt  test_expander.c  test_lexer.c  test_parser.c  test_tokenizer.c
